[package]
name = "http-server"
version = "0.1.0"
authors = ["sisso <sissobr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.6"
serde_json = "1.*"
logs = { version = "*", path = "../logs" }
