[package]
name = "mage_fight"
version = "0.1.0"
authors = ["sisso <sissobr@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7"

# serde
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# specs
specs = { version = "0.16.*", features = ["serde"] }
specs-derive = "0.4.0"
shred = { version = "0.10.*", default-features = false }
shred-derive = "0.6.*"

# console
tui = "0.6.*"
termion = "*"
