[package]
name = "mud-domain"
version = "0.1.0"
authors = ["sisso <sisso@sisso.com.br>"]
edition = "2018"

[lib]

[dependencies]
rand ="*"
termion = "*"
serde_json = "1.*"
logs = { version = "*", path = "../logs" }
commons = { version = "*", path = "../commons" }
hocon = { version = "0.3.*", default-features = false, features=["serde-support"] }
serde = { version = "1.0", features = ["derive"] }

