[package]
name = "mud-domain"
version = "0.1.0"
authors = ["sisso <sisso@sisso.com.br>"]
edition = "2018"

[lib]

[dependencies]
rand ="*"
serde_json = "1.*"
logs = { version = "*", path = "../logs" }
commons = { version = "*", path = "../commons" }
serde = { version = "1.0", features = ["derive"] }
clap = "3.0.0-beta.2"