[package]
name = "mud-server"
version = "0.1.0"
authors = ["sisso <sisso@sisso.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand ="*"
commons = { version = "*", path = "../commons" }
mud-domain = { version = "*", path = "../mud-domain" }
socket-server = { version = "*", path = "../socket-server" }
http-server = { version = "*", path = "../http-server" }
logs = { version = "*", path = "../logs" }
ctrlc = "3.1.6"
serde_json = "1.*"
