[package]
name = "random-stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.*"
hocon="0.3.4"
rand_distr = "0.4.0"
rand ="0.8.0"
log = "0.4.18"
env_logger = "0.10.0"
commons = { version = "*", path = "../commons" }
